fix code color in dark mode

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1055,7 +1055,7 @@ pre {
 pre code {
   padding: 0;
   font-size: 100%;
-  color: inherit;
+  color: #1a1a1a;
   background-color: transparent;
 }
 
